crates/decman-lib/snapshots/decman_lib__catalog__proposals__utility__tests__provision_provider_service.snap
---
source: crates/decman-lib/src/catalog/proposals/utility.rs
expression: "ProvisionProviderService {}.to_daml_proto().unwrap()"
---
Value {
    sum: Some(
        Record(
            Record {
                record_id: None,
                fields: [],
            },
        ),
    ),
}
